objects/Gong__Related_Account__c.object
<CustomObject>
    <description>A junction object that associated a call and an account.</description>
    <fields>
        <fullName>Gong__Account_Name__c</fullName>
        <formula>HYPERLINK( Gong__Related_Entity_ID__r.Id , Gong__Related_Entity_ID__r.Name ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Duration__c</fullName>
        <description>The duration of the call associated in this junction object.</description>
        <formula>Gong__Gong_Interaction__r.Gong__Call_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Participants_Emails__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Participants_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Entity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gong Related Accounts</label>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>